--- a/tools/sip.html
+++ b/tools/sip.html
@@ -43,6 +43,30 @@
                 <button id="resetSIP">Reset</button>
                 <div id="sipResult"></div>
                 <canvas id="myChart"></canvas>
+                <div class="tool-explanation">
+    <h3>Grow Your Wealth Systematically with the SIP Calculator</h3>
+    <p>
+        The SIP Calculator is a powerful tool designed to help you estimate the future value of your Systematic Investment Plan (SIP) investments. SIPs are a popular way to invest in mutual funds, allowing you to invest a fixed amount regularly. This calculator estimates your investment's growth based on your monthly investment, expected rate of return, and investment period.
+    </p>
+    <p>
+        The SIP Calculator uses a formula that calculates the future value of a series of regular payments:
+        **FV = PMT * [((1 + r)^n - 1) / r] * (1 + r)**
+        Where:
+        FV = Future Value of the SIP
+        PMT = Monthly Investment
+        r = Monthly Rate of Return (annual rate / 12 / 100)
+        n = Number of Months (time in years * 12)
+    </p>
+    <p>
+        This tool is invaluable for anyone looking to invest in mutual funds through SIPs. It helps you understand the potential growth of your investments and plan for your financial goals. By exploring different scenarios, you can make informed decisions about your SIP strategy.
+    </p>
+    <p>
+        The benefits of using the SIP Calculator are significant. It helps you visualize the potential growth of your SIP investments, empowering you to make strategic decisions about your portfolio. It also helps you appreciate the importance of disciplined investing and long-term financial planning.
+    </p>
+    <p>
+        To use the SIP Calculator effectively, start by entering your monthly investment amount. Then, input the expected annual rate of return (as a percentage) and investment period in years. The calculator will then display the future value of your SIP and the total earnings. Analyze the results to understand how different factors affect your returns. Experiment with various scenarios to find the optimal SIP strategy for your financial goals. With consistent use, the SIP Calculator can become an indispensable tool in your financial planning.
+    </p>
+</div>
             </div>
         </section>
     </main>
