--- a/index.html
+++ b/index.html
@@ -17,26 +17,51 @@
     </header>
     <main>
         <section class="hero">
-            <h1>Unlock Your Financial Potential</h1>
-            <p>Powerful tools to manage your finances with ease.</p>
-            <button class="cta-button">Get Started</button>
-        </section>
-        <section class="tools">
-            <h2>Our Financial Tools</h2>
-            <div class="tool-grid">
-                <a href="tools/loan.html" class="tool-card">EMI (Loan) Calculator</a>
-                <a href="tools/investment.html" class="tool-card">Investment Calculator</a>
-                <a href="tools/budget.html" class="tool-card">Budget Planner</a>
-                <a href="tools/currency.html" class="tool-card">Currency Converter</a>
-                <a href="tools/compound.html" class="tool-card">Compound Interest Calculator</a>
-                <a href="tools/sip.html" class="tool-card">SIP (Mutual Fund) Calculator</a>
-                <a href="tools/fdrd.html" class="tool-card">FD vs. RD Calculator</a>
-                <a href="tools/retirement.html" class="tool-card">Retirement Planner</a>
+            <div class="hero-content">
+                <h1>Unlock Your Financial Potential</h1>
+                <p>Powerful tools to manage your finances with ease.</p>
+                <a href="#get-started" class="cta-button">Get Started</a>
             </div>
         </section>
-        <section class="charts">
-            <h2>Financial Insights</h2>
-            <canvas id="myChart"></canvas>
+        <section id="get-started" class="get-started">
+            <h2>Start Your Financial Journey Today</h2>
+            <p>We provide powerful tools to help you take control of your finances. Explore our calculators and resources to plan your budget, investments, and more.</p>
+            <div class="tool-links">
+                <a href="tools/loan.html" class="tool-button">EMI (Loan) Calculator</a>
+                <a href="tools/investment.html" class="tool-button">Investment Calculator</a>
+                <a href="tools/budget.html" class="tool-button">Budget Planner</a>
+                <a href="tools/currency.html" class="tool-button">Currency Converter</a>
+                <a href="tools/compound.html" class="tool-button">Compound Interest Calculator</a>
+                <a href="tools/sip.html" class="tool-button">SIP (Mutual Fund) Calculator</a>
+                <a href="tools/fdrd.html" class="tool-button">FD vs. RD Calculator</a>
+                <a href="tools/retirement.html" class="tool-button">Retirement Planner</a>
+            </div>
+        </section>
+        <section class="why-use">
+            <h2>Why Use Our Financial Calculators?</h2>
+            <p>Our calculators are designed to provide you with accurate and easy-to-understand financial insights. They can help you make informed decisions about your budget, investments, loans, and retirement.</p>
+            <ul>
+                <li>Easy-to-use interface</li>
+                <li>Accurate calculations</li>
+                <li>Comprehensive results</li>
+            </ul>
+            <p class="testimonial">"These calculators have been incredibly helpful in managing my finances." - Jane Doe</p>
+        </section>
+        <section class="financial-tips">
+            <h2>Financial Planning Tips</h2>
+            <article>
+                <h3>5 Tips for Effective Budgeting</h3>
+                <p>Learn how to create a budget that works for you and achieve your financial goals.</p>
+                <a href="/blog/budget-tips.html" class="read-more">Read More</a>
+            </article>
+            <div class="quick-tips">
+                <h4>Quick Tips</h4>
+                <ul>
+                    <li>Save a percentage of your monthly income.</li>
+                    <li>Track your expenses regularly.</li>
+                    <li>Set realistic financial goals.</li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer>
