--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paylic - Financial Tools</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -27,15 +28,15 @@
             <h2>Start Your Financial Journey Today</h2>
             <p>We provide powerful tools to help you take control of your finances. Explore our calculators and resources to plan your budget, investments, and more.</p>
             <div class="tool-links">
-                <a href="tools/loan.html" class="tool-button">EMI (Loan) Calculator</a>
-                <a href="tools/investment.html" class="tool-button">Investment Calculator</a>
-                <a href="tools/budget.html" class="tool-button">Budget Planner</a>
-                <a href="tools/currency.html" class="tool-button">Currency Converter</a>
-                <a href="tools/compound.html" class="tool-button">Compound Interest Calculator</a>
-                <a href="tools/sip.html" class="tool-button">SIP (Mutual Fund) Calculator</a>
-                <a href="tools/fdrd.html" class="tool-button">FD vs. RD Calculator</a>
-                <a href="tools/retirement.html" class="tool-button">Retirement Planner</a>
-            </div>
+    <a href="tools/loan.html" class="tool-button"><i class="fas fa-calculator"></i> EMI (Loan) Calculator</a>
+    <a href="tools/investment.html" class="tool-button"><i class="fas fa-chart-line"></i> Investment Calculator</a>
+    <a href="tools/budget.html" class="tool-button"><i class="fas fa-wallet"></i> Budget Planner</a>
+    <a href="tools/currency.html" class="tool-button"><i class="fas fa-exchange-alt"></i> Currency Converter</a>
+    <a href="tools/compound.html" class="tool-button"><i class="fas fa-chart-area"></i> Compound Interest Calculator</a>
+    <a href="tools/sip.html" class="tool-button"><i class="fas fa-chart-pie"></i> SIP (Mutual Fund) Calculator</a>
+    <a href="tools/fdrd.html" class="tool-button"><i class="fas fa-columns"></i> FD vs. RD Calculator</a>
+    <a href="tools/retirement.html" class="tool-button"><i class="fas fa-home"></i> Retirement Planner</a>
+</div>
         </section>
         <section class="why-use">
             <h2>Why Use Our Financial Calculators?</h2>
