--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="hero-content">
                 <h1>Unlock Your Financial Potential</h1>
                 <p>Powerful tools to manage your finances with ease.</p>
-                <a href="#get-started" class="cta-button">Get Started</a>
+                <a href="tools/loan.html" class="cta-button">Get Started</a>
             </div>
         </section>
         <section id="get-started" class="get-started">
