--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <header>
+    <header class="fixed-header">
+    <div class="header-content">
         <div class="logo"><img src="assets/logo.png" alt="Paylic Logo"> Paylic</div>
         <nav>
             <a href="index.html">Home</a>
             <a href="pages/about.html">About Us</a>
             <a href="pages/contact.html">Contact</a>
         </nav>
-    </header>
+    </div>
+</header>
     <main>
         <section class="hero">
             <div class="hero-content">
