--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="fixed-header">
-    <div class="header-content">
-        <div class="logo"><img src="assets/logo.png" alt="Paylic Logo"> Paylic</div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="pages/about.html">About Us</a>
-            <a href="pages/contact.html">Contact</a>
-        </nav>
-    </div>
-</header>
+        <div class="header-content">
+            <div class="logo"><img src="assets/logo.png" alt="Paylic Logo"> Paylic</div>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="pages/about.html">About Us</a>
+                <a href="pages/contact.html">Contact</a>
+            </nav>
+        </div>
+    </header>
     <main>
         <section class="hero">
             <div class="hero-content">
@@ -33,15 +33,15 @@
             <h2>Start Your Financial Journey Today</h2>
             <p>We provide powerful tools to help you take control of your finances. Explore our calculators and resources to plan your budget, investments, and more.</p>
             <div class="tool-links">
-    <a href="tools/loan.html" class="tool-button"><i class="fas fa-calculator"></i> EMI (Loan) Calculator</a>
-    <a href="tools/investment.html" class="tool-button"><i class="fas fa-chart-line"></i> Investment Calculator</a>
-    <a href="tools/budget.html" class="tool-button"><i class="fas fa-wallet"></i> Budget Planner</a>
-    <a href="tools/currency.html" class="tool-button"><i class="fas fa-exchange-alt"></i> Currency Converter</a>
-    <a href="tools/compound.html" class="tool-button"><i class="fas fa-chart-area"></i> Compound Interest Calculator</a>
-    <a href="tools/sip.html" class="tool-button"><i class="fas fa-chart-pie"></i> SIP (Mutual Fund) Calculator</a>
-    <a href="tools/fdrd.html" class="tool-button"><i class="fas fa-columns"></i> FD vs. RD Calculator</a>
-    <a href="tools/retirement.html" class="tool-button"><i class="fas fa-home"></i> Retirement Planner</a>
-</div>
+                <a href="tools/loan.html" class="tool-button"><i class="fas fa-calculator"></i> EMI (Loan) Calculator</a>
+                <a href="tools/investment.html" class="tool-button"><i class="fas fa-chart-line"></i> Investment Calculator</a>
+                <a href="tools/budget.html" class="tool-button"><i class="fas fa-wallet"></i> Budget Planner</a>
+                <a href="tools/currency.html" class="tool-button"><i class="fas fa-exchange-alt"></i> Currency Converter</a>
+                <a href="tools/compound.html" class="tool-button"><i class="fas fa-chart-area"></i> Compound Interest Calculator</a>
+                <a href="tools/sip.html" class="tool-button"><i class="fas fa-chart-pie"></i> SIP (Mutual Fund) Calculator</a>
+                <a href="tools/fdrd.html" class="tool-button"><i class="fas fa-columns"></i> FD vs. RD Calculator</a>
+                <a href="tools/retirement.html" class="tool-button"><i class="fas fa-home"></i> Retirement Planner</a>
+            </div>
         </section>
         <section class="why-use">
             <h2>Why Use Our Financial Calculators?</h2>
