--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <header>
-        <div class="logo"><img src="../assets/logo.png" alt="Paylic Logo"> Paylic</div>
-        <nav>
-            <a href="../index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="contact.html">Contact</a>
-        </nav>
+    <header class="fixed-header">
+        <div class="header-content">
+            <div class="logo"><img src="assets/logo.png" alt="Paylic Logo"> Paylic</div>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="pages/about.html">About Us</a>
+                <a href="pages/contact.html">Contact</a>
+            </nav>
+        </div>
     </header>
     <main>
         <section class="contact-content">
