--- a/tools/retirement.html
+++ b/tools/retirement.html
@@ -8,13 +8,15 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <header>
-        <div class="logo"><img src="../assets/logo.png" alt="Paylic Logo"> Paylic</div>
-        <nav>
-            <a href="../index.html">Home</a>
-            <a href="../pages/about.html">About Us</a>
-            <a href="../pages/contact.html">Contact</a>
-        </nav>
+    <header class="fixed-header">
+        <div class="header-content">
+            <div class="logo"><img src="assets/logo.png" alt="Paylic Logo"> Paylic</div>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="pages/about.html">About Us</a>
+                <a href="pages/contact.html">Contact</a>
+            </nav>
+        </div>
     </header>
     <main>
         <section class="tool-content">
