--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="fixed-header">
         <div class="header-content">
-            <div class="logo"><img src="assets/logo.png" alt="Paylic Logo"> Paylic</div>
+            <div class="logo"> Paylic</div>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="pages/about.html">About Us</a>
