--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <header class="fixed-header">
         <div class="header-content">
-            <div class="logo"> Paylic</div>
+           <div class="logo">
+            <a href="index.html">Paylic</a>
+        </div>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="pages/about.html">About Us</a>
