--- a/tools/fdrd.html
+++ b/tools/fdrd.html
@@ -10,7 +10,9 @@
 <body>
     <header class="fixed-header">
         <div class="header-content">
-            <div class="logo"><img src="assets/logo.png" alt="Paylic Logo"> Paylic</div>
+          <div class="logo">
+            <a href="index.html">Paylic</a>
+        </div>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="pages/about.html">About Us</a>
