--- a/pages/terms.html
+++ b/pages/terms.html
@@ -5,34 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paylic - Terms of Service</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="fixed-header">
         <div class="header-content">
-           <div class="logo">
-            <a href="index.html">Paylic</a>
-        </div>
+            <div class="logo"><a href="../index.html">Paylic</a></div>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="pages/about.html">About Us</a>
-                <a href="pages/contact.html">Contact</a>
+                <a href="../index.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </div>
     </header>
-    <main>
-        <section class="terms-content">
-            <h2>Terms of Service</h2>
-            <p>
-                Welcome to Paylic. By accessing and using our website and services, you agree to comply with and be bound by the following Terms of Service. Please read these terms carefully.
-            </p>
-            <p>
-                <strong>Acceptance of Terms:</strong>
-            </p>
-            <p>
-                Your use of Paylic constitutes your agreement to these Terms of Service. If you do not agree with any part of these terms, please do not use our services.
-            </p>
-            <p>
-                <strong>Use of Services:</strong>
-            </p>
-            <p>
-                You agree to use Paylic for lawful purposes only. You must not use our services in any way that could damage, disable, or impair our website or interfere with any other user's access.
+    <main class="tool-content">
+        <h1>Terms of Service</h1>
+
+        <p>Welcome to Paylic! By accessing and using our website and services, you agree to comply with and be bound by the following terms and conditions of use. Please read these terms carefully.</p>
+
+        <h2>1. Acceptance of Terms</h2>
+        <p>By using Paylic, you agree to be bound by these Terms of Service. If you do not agree with any part of these terms, you must not use our website or services.</p>
+
+        <h2>2. Use of Services</h2>
+        <p>You agree to use our services only for lawful purposes. You must not use our services to transmit or distribute any material that is unlawful, harmful, threatening, abusive, harassing, defamatory, vulgar, obscene, or otherwise objectionable.</p>
+
+        <h2>3. Intellectual Property</h2>
+        <p>All content on Paylic, including text, graphics, logos, and software, is the property of Paylic or its licensors and is protected by intellectual property laws. You may not reproduce, distribute, or modify any content from our website without our express written permission.</p>
+
+        <h2>4. Disclaimer of Warranties</h2>
+        <p>Paylic provides its services on an "as is" and "as available" basis. We make no warranties or representations about the accuracy, reliability, or completeness of the content on our website. We disclaim all warranties, express or implied, including but not limited to warranties of merchantability and fitness for a particular purpose.</p>
+
+        <h2>5. Limitation of Liability</h2>
+        <p>In no event shall Paylic be liable for any direct, indirect, incidental, special, or consequential damages arising out of or in connection with your use of our website or services.</p>
+
+        <h2>6. Changes to Terms</h2>
+        <p>We reserve the right to modify these Terms of Service at any time. Any changes will be effective immediately upon posting on our website. Your continued use of our website after any changes constitutes your acceptance of the new Terms of Service.</p>
+
+        <h2>7. Governing Law</h2>
+        <p>These Terms of Service shall be governed by and construed in accordance with the laws of [Your Jurisdiction], without regard to its conflict of law provisions.</p>
+
+        <h2>8. Contact Us</h2>
+        <p>If you have any questions about these Terms of Service, please contact us at [Your Contact Information].</p>
+
+    </main>
+    <footer>
+        <nav>
+            <a href="privacy.html">Privacy Policy</a>
+            <a href="terms.html">Terms of Service</a>
+        </nav>
+        <p>&copy; 2024 Paylic</p>
+    </footer>
+</body>
+</html>
