--- a/pages/about.html
+++ b/pages/about.html
@@ -20,7 +20,7 @@
         </div>
     </header>
     <main>
-        <section class="about-content">
+        <section class="tool-content">
             <h2>About Paylic</h2>
             <p>
                 At Paylic, we believe that everyone deserves access to powerful and intuitive financial tools. Our mission is to empower individuals and businesses to take control of their financial future. We understand that managing finances can be complex and overwhelming, which is why we’ve dedicated ourselves to creating a platform that simplifies this process.
