--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,7 +20,7 @@
         </div>
     </header>
     <main>
-        <section class="contact-content">
+        <section class="tool-content">
             <h2>Contact Us</h2>
             <p>
                 We value your feedback and are here to assist you with any questions or concerns you may have. Please feel free to reach out to us using the form below, and we will get back to you as soon as possible.
