--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -20,7 +20,7 @@
         </div>
     </header>
     <main>
-        <section class="privacy-content">
+        <section class="tool-content">
             <h2>Privacy Policy</h2>
             <p>
                 At Paylic, we are committed to protecting your privacy. This Privacy Policy outlines how we collect, use, and safeguard your personal information. By using our website and services, you consent to the practices described in this policy.
