--- a/pages/terms.html
+++ b/pages/terms.html
@@ -21,7 +21,7 @@
         </div>
     </header>
    <main>
-        <section class="terms-content">
+        <section class="tool-content">
         <h1>Terms of Service</h1>
 
         <p>Welcome to Paylic! By accessing and using our website and services, you agree to comply with and be bound by the following terms and conditions of use. Please read these terms carefully.</p>
