--- a/pages/about.html
+++ b/pages/about.html
@@ -13,7 +13,7 @@
     <header class="fixed-header">
         <div class="header-content">
             <div class="logo">
-            <a href="index.html">Paylic</a>
+            <a href="/index.html">Paylic</a>
         </div>
             <nav>
                 <a href="index.html">Home</a>
