--- a/pages/about.html
+++ b/pages/about.html
@@ -16,7 +16,7 @@
             <a href="/index.html">Paylic</a>
         </div>
             <nav>
-                <a href="index.html">Home</a>
+                <a href="/index.html">Home</a>
                 <a href="pages/about.html">About Us</a>
                 <a href="pages/contact.html">Contact</a>
             </nav>
@@ -54,8 +54,8 @@
     </main>
     <footer>
         <nav>
-            <a href="privacy.html">Privacy Policy</a>
-            <a href="terms.html">Terms of Service</a>
+            <a href="/privacy.html">Privacy Policy</a>
+            <a href="/terms.html">Terms of Service</a>
         </nav>
         <p>&copy; 2024 Paylic</p>
     </footer>
