--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -13,10 +13,10 @@
     <header class="fixed-header">
         <div class="header-content">
            <div class="logo">
-            <a href="index.html">Paylic</a>
+            <a href="/index.html">Paylic</a>
         </div>
             <nav>
-                <a href="index.html">Home</a>
+                <a href="/index.html">Home</a>
                 <a href="pages/about.html">About Us</a>
                 <a href="pages/contact.html">Contact</a>
             </nav>
@@ -71,8 +71,8 @@
     </main>
     <footer>
         <nav>
-            <a href="privacy.html">Privacy Policy</a>
-            <a href="terms.html">Terms of Service</a>
+            <a href="/privacy.html">Privacy Policy</a>
+            <a href="/terms.html">Terms of Service</a>
         </nav>
         <p>&copy; 2024 Paylic</p>
     </footer>
