--- a/pages/contact.html
+++ b/pages/contact.html
@@ -13,7 +13,7 @@
     <header class="fixed-header">
         <div class="header-content">
             <div class="logo">
-            <a href="index.html">Paylic</a>
+            <a href="/index.html">Paylic</a>
         </div>
             <nav>
                 <a href="index.html">Home</a>
@@ -50,8 +50,8 @@
     </main>
     <footer>
         <nav>
-            <a href="privacy.html">Privacy Policy</a>
-            <a href="terms.html">Terms of Service</a>
+            <a href="pages/privacy.html">Privacy Policy</a>
+            <a href="pages/terms.html">Terms of Service</a>
         </nav>
         <p>&copy; 2024 Paylic</p>
     </footer>
