--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -71,8 +71,8 @@
     </main>
     <footer>
         <nav>
-            <a href="/privacy.html">Privacy Policy</a>
-            <a href="/terms.html">Terms of Service</a>
+            <a href="pages/privacy.html">Privacy Policy</a>
+            <a href="pages/terms.html">Terms of Service</a>
         </nav>
         <p>&copy; 2024 Paylic</p>
     </footer>
