--- a/pages/terms.html
+++ b/pages/terms.html
@@ -14,9 +14,9 @@
         <div class="header-content">
             <div class="logo"><a href="../index.html">Paylic</a></div>
             <nav>
-                <a href="../index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="contact.html">Contact</a>
+                <a href="/index.html">Home</a>
+                <a href="pages/about.html">About Us</a>
+                <a href="pages/contact.html">Contact</a>
             </nav>
         </div>
     </header>
@@ -53,8 +53,8 @@
     </main>
     <footer>
         <nav>
-            <a href="privacy.html">Privacy Policy</a>
-            <a href="terms.html">Terms of Service</a>
+            <a href="pages/privacy.html">Privacy Policy</a>
+            <a href="pages/terms.html">Terms of Service</a>
         </nav>
         <p>&copy; 2024 Paylic</p>
     </footer>
